# Rithmatist-Game

./: .gitignore  CMakeLists.txt  Credits.txt  README.md  THANKS.md  clang-format.txt
Examples/: CMakeCache.txt  CMakeLists.txt  Color.cpp  Color.hpp  Line.cpp  Line.hpp  Makefile  Point.cpp  Point.hpp  Rithmatist  Triangle  cmake_install.cmake  dep  main.cpp  opengl-examples
Examples/Examples/: main.cpp
src/: Arena.cpp  Arena.hpp  Color.cpp  Color.hpp  Debug.hpp  Geometry.cpp  Geometry.hpp  Globals.cpp  Globals.hpp  Gui.cpp  Gui.hpp  Line.cpp  Line.hpp  LineForbiddence.cpp  LineForbiddence.hpp  LineMaking.cpp  LineMaking.hpp  LineVigor.cpp  LineVigor.hpp  LineWarding.cpp  LineWarding.hpp  Nuklear.cpp  Nuklear.hpp  Player.cpp  Player.hpp  Point.cpp  Point.hpp  StdMathFunc.cpp  StdMathFunc.hpp  WardingSection.cpp  main.cpp
